--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,9 +1,8 @@
 .footer {
-  font-family: "Poppins", serif;
+  font-family: "Poppins", Arial, Sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
-  padding: 0 20px;
 
 }
 
@@ -18,4 +17,10 @@
   border-top: 1px rgb(33, 33, 33, 0.4) solid;
 }
 
+@media screen and (max-width:627px) {
+  .footer__copyright {
+    margin-top: 20px; 
+  }
+
+}
 
