--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,7 +19,7 @@
 
 .card__title {
   margin: 0;
-  font-family: "Poppins", serif;
+  font-family: "Poppins", Arial, sans-serif;
   font-size: 20px;
   line-height: 24px;
   color: #212121;
@@ -33,7 +33,6 @@
 }
 
 
-
 .card__like-btn {
   background-image: url(../images/LikeIcon.svg);
   width: 23px;
@@ -41,18 +40,13 @@
   opacity: 40%;
   border: none;
   background-color: transparent;
-
+  margin-top: 12px;
 }
 
 .card__like-btn:hover {
   cursor: pointer;
-  background-image: url(../images/Like2.svg);
   transition: 0.5s ease;
-  width: 23px;
-  height: 20px;
   opacity: 100%;
-  border: none;
-  background-color: transparent;
 }
 
 @media screen and (max-width: 627px) {
@@ -63,6 +57,8 @@
 
   .card__title {
     max-width: 250px;
+    font-size: 16px;
+    line-height: 20px;
   }
 
 }
