--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,6 +11,8 @@
   width: 190px;
   border-radius: 8px;
   border: none;
+  object-fit: cover;
+
 }
 
 .profile__column {
@@ -20,7 +22,7 @@
 
 .profile__name {
   margin: 0 0 12px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   max-width: 420px;
   font-size: 32px;
   line-height: 32px;
@@ -35,7 +37,7 @@
 
 .profile__description {
   margin: 0;
-  font-family: "Poppins", serif;
+  font-family: "Poppins", Arial, sans-serif;
   max-width: 420px;
   color: rgba(33, 33, 33, 0.7);
   font-size: 16px;
@@ -57,11 +59,12 @@
   background: none;
   border: none;
   padding: 0;
-  font-family: "Poppins", serif;
+  font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
-  color: rgba(33, 33, 33, 0.7);
+  color: #212121;
+  opacity: 0.7;
 }
 
 .profile__add-btn {
@@ -76,7 +79,7 @@
   border: none;
   gap: 8px;
   padding: 18px 32px;
-  font-family: "Poppins", serif;
+  font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   size: 16px;
   line-height: 16px;
@@ -84,13 +87,13 @@
 
 .profile__edit-btn:hover {
   cursor: pointer;
-  color: #212121;
+  opacity: 1;
   transition: 0.5s ease;
 }
 
 .profile__add-btn:hover {
   cursor: pointer;
-  background-color: rgba(33, 33, 33, 0.8);
+  opacity: 0.8;
   transition: 0.5s ease;
 }
 
@@ -112,7 +115,6 @@
 
   .profile__name {
     width: 100%;
-    font-weight: 500;
     font-size: 20px;
     line-height: 20px;
     margin: 0 0 6px;
@@ -121,12 +123,10 @@
 
   .profile__description {
     width: 100%;
-    height: 16px;
     padding-top: 6px;
     align-items: center;
     font-size: 16px;
     line-height: 16px;
-    font-weight: 500;
     margin: 0 0 32px;
     max-width: 288px;
   }
@@ -136,17 +136,14 @@
     width: 100%;
     height: 52px;
     justify-content: center;
-    align-items: center;
     font-size: 16px;
     line-height: 16px;
-    font-weight: 500;
   }
 
   .profile__edit-btn {
     justify-content: center;
     font-size: 16px;
     line-height: 16px;
-    font-weight: 500;
   }
 
   .profile__column {
